servicemesh/fault-injector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fault-injector
spec:
  ports:
  - name: fault-injector
    port: 9411
    targetPort: 9411
  selector:
    app: fault-injector
