servicemesh/fault-injector-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fault-injector
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /fault
        backend:
          serviceName: fault-injector
          servicePort: 9411
